# flow-v2

./: .env.local.example  .gitattributes  .gitignore  README.md  prd.json  pyproject.toml
flow_web/: main.py  messages.py  schemas.py  service.py  shot_rules.py  store.py
flow_web/static/: app.js  index.html  styles.css
scripts/: backfill_content_review_titles.py  build_windows_portable.ps1  havi_flow_task_launcher.cmd  install_flow_web_startup_shortcut.ps1  install_flow_web_startup_task.ps1  run_flow_web.ps1  run_flow_web.py  run_flow_web.sh  run_flow_web_tests.ps1  run_flow_web_tests.sh  start_flow_web_background.ps1
tasks/: prd-flow-agent-automation-v2.md
tests/: test_flow_web_smoke.py
tools/: export_flow_tool_rules_excel.py
